<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="290dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/my_tasks_header"
        android:textAlignment="viewStart"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="371dp"
        android:layout_height="384dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/placeholdertasklistimagetext"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText"
        app:srcCompat="@android:drawable/btn_dialog"
        tools:srcCompat="@android:drawable/btn_dialog" />

    <Button
        android:id="@+id/add_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/add_task_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/all_tasks_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskButton3"
        app:layout_constraintVertical_bias="0.88" />

    <Button
        android:id="@+id/all_tasks_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_tasks_button_text"
        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_task_button"
        app:layout_constraintTop_toTopOf="@+id/add_task_button" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/settings_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/all_tasks_button"
        app:layout_constraintTop_toTopOf="@+id/add_task_button" />

    <TextView
        android:id="@+id/taskListTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/taskListTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <Button
        android:id="@+id/taskButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task1Text"
        app:layout_constraintStart_toStartOf="@+id/taskListTitleTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/taskButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task2Text"
        app:layout_constraintStart_toEndOf="@+id/taskButton1"
        app:layout_constraintTop_toTopOf="@+id/taskButton1" />

    <Button
        android:id="@+id/taskButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/task3Text"
        app:layout_constraintStart_toEndOf="@+id/taskButton2"
        app:layout_constraintTop_toTopOf="@+id/taskButton2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_list_main_recycler_view"
        android:layout_width="363dp"
        android:layout_height="379dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/add_task_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskListTitleTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>