<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetail">

    <TextView
        android:id="@+id/taskTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/task_details_header_text"
        android:textAlignment="viewStart"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskBodyTextView"
        android:layout_width="341dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/loremIpsumText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskStateTextView" />

    <TextView
        android:id="@+id/taskStateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/task_progress_text"
        app:layout_constraintStart_toStartOf="@+id/taskTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleTextView" />

    <ImageView
        android:id="@+id/taskDetailImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskAddressTextView" />

    <Button
        android:id="@+id/mapViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View in Maps"
        app:layout_constraintBottom_toBottomOf="@+id/taskAddressTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/taskAddressTextView"
        app:layout_constraintTop_toTopOf="@+id/taskAddressTextView" />

    <TextView
        android:id="@+id/taskAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/address_detail"
        app:layout_constraintEnd_toStartOf="@+id/mapViewButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskBodyTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>